2005-05-18  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffe/version.c (printShortVersion):
	Hey, it's 2005 already!

2005-05-18  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffe/version.h:
	(JAVA_VERSION_STRING) Report a 1.4 in there for Berkely DB.

	Reported by:  Alejandro Mery  <amery@geeks.cl>

2005-05-18  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/Makefile.am.in:
	Move rmic to tools.jar.

	* kaffe/scripts/rmic.in: Updated accordingly.

	* libraries/javalib/gnu/classpath/tools/rmi/rmic/Compiler.java
	(classPrefix) Implement in generic fashion.

2005-05-18  Rei Odaira <ray@is.s.u-tokyo.ac.jp>

	* kaffe/kaffevm/classMethod.c:
	(getInheritedMethodIndex) Check whether method 
	is accessible.

2005-05-18  Julio M. Merino Vidal <jmmv84@gmail.com>

	* libraries/javalib/gnu/classpath/tools/rmi/rmic/Compiler.java:
	(classPrefix) Fixed to match package name.

2005-05-17  Davanum Srinivas <dims@yahoo.com>

	* kaffe/kaffevm/thread.c (setPriorityThread):
	Fixed prototype to fix compilation problem on Cygwin.

	* kaffe/kaffevm/jit/icode.c (pusharg_int_const):
	Fixed prototype to fix compilation problem on Cygwin.

2005-05-17  Dalibor Topic  <robilad@kaffe.org>

	* libraries/clib/native/java_lang_VMSystem.c,
	libraries/javalib/java/lang/VMSystem.java,
	test/internal/java/lang/VMSystem.java:
	New files. Taken from GNU Classpath.

	* include/Makefile.am (NOINSTALL_DERIVED_HDRS): Removed
	java_lang_System.h. (NOINSTALL_JNI_DERIVED_HDRS) Added
	java_lang_VMSystem.h.

	* kaffe/kaffevm/baseClasses.c (RuntimeClass): New field.
	(RUNTIMECLASS) New constant. 
	(initBaseClasses) Load Runtime class.

	* kaffe/kaffevm/baseClasses.h (RuntimeClass): export field.

	* kaffe/kaffevm/thread.c (runfinalizer): Call exitJavaCleanupHook
	in Runtime class.

	* libraries/clib/native/Class.c,
	libraries/clib/native/Field.c: Removed unnecessary include of
	java_lang_System.h.

	* libraries/clib/native/Makefile.am (LANG_SRCS): Added 
	java_lang_VMSystem.c.
