@@ -1,5 +1,14 @@
 2005-05-18  Dalibor Topic  <robilad@kaffe.org>
 
+	Resynced with GNU Classpath.
+
+	2005-05-16  Tom Tromey  <tromey@redhat.com>
+
+        * java/nio/charset/Charset.java (encode, decode): Synchronize on
+        'this', not the class.
+
+2005-05-18  Dalibor Topic  <robilad@kaffe.org>
+
 	* kaffe/kaffe/version.c (printShortVersion):
 	Hey, it's 2005 already!
 
